force-app/main/default/objects/Apttus__Agreement_Document__c/Apttus__Agreement_Document__c.object-meta.xml
<CustomObject>
    <description>Links to agreement documents that are not stored in Apttus / Salesforce repository.  These could be URLs to files stored on a file server or document management system behind the client&apos;s firewall.</description>
    <label>Agreement Document</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>