force-app/main/default/objects/Apttus__Agreement_Document__c/fields/Apttus__Agreement__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Agreement__c</fullName>
    <label>Agreement</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipName>Agreement_Document</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>