force-app/main/default/objects/Apttus__Agreement_Document__c/fields/Apttus__Path__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Path__c</fullName>
    <description>The http path to a file located on an internal web server.  It is not necessary to prefix this with http:// since the data type is URL and this gets added automatically.</description>
    <label>Path</label>
    <type>Url</type>
</CustomField>