force-app/main/default/objects/Apttus__Agreement_Document__c/fields/Apttus__Type__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Type__c</fullName>
    <description>The type of document (i.e. scanned image, etc)</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scanned Image</fullName>
                <default>true</default>
                <label>Scanned Image</label>
            </value>
            <value>
                <fullName>Final Electronic Copy</fullName>
            </value>
            <value>
                <fullName>Supporting Attachment</fullName>
            </value>
            <value>
                <fullName>Interim Version</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>