force-app/main/default/objects/Apttus__Agreement_Document__c/fields/Apttus__URL__c.field-meta.xml
<CustomField>
    <fullName>Apttus__URL__c</fullName>
    <defaultValue>&quot;http://&quot;</defaultValue>
    <description>The http://, https:// or file:// URL to the document.  This field should contain the fully qualified URL path to the document.</description>
    <inlineHelpText>The http://, https:// or file:// URL to the document.  This field should contain the fully qualified URL path to the document.</inlineHelpText>
    <label>URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>