force-app/main/default/objects/Apttus__Agreement_Document__c/fields/Apttus__URL_Link__c.field-meta.xml
<CustomField>
    <fullName>Apttus__URL_Link__c</fullName>
    <description>A hyperlink that can be clicked on to access the document</description>
    <formula>IF (NOT(ISNULL(Apttus__URL__c)),HYPERLINK(Apttus__URL__c,&quot;View&quot;, &quot;_blank&quot;),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A hyperlink that can be clicked on to access the document</inlineHelpText>
    <label>URL Link</label>
    <type>Text</type>
</CustomField>