force-app/main/default/objects/Apttus__Agreement_Document__c/fields/Apttus__Version__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Version__c</fullName>
    <description>Optional version information about the document</description>
    <label>Version</label>
    <type>TextArea</type>
</CustomField>